<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:id="@+id/dialog_add_slucaj_id">

    <Spinner
        android:layout_marginLeft="12dp"
        android:id="@+id/spnDialogAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Broj stranaka:"/>

        <EditText
            android:id="@+id/broj_stranaka"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>



</LinearLayout>